--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: wallet_flow
 description: "Plugin for adding cards to google and apple wallet."
-version: 0.0.1
+version: 0.0.3
 homepage: https://github.com/murlod1n/wallet_flow
 
 environment:
@@ -27,3 +27,8 @@ flutter:
         pluginClass: WalletFlowPlugin
       ios:
         pluginClass: WalletFlowPlugin
+
+
+screenshots:
+  - description: The Wallet Flow logo.
+    path: assets/logo.png
